fix header overflow horizontally

--- a/css/Main.module.css
+++ b/css/Main.module.css
@@ -1,1 +1,20 @@
-.container{display:flex;justify-content:space-between}.countries{margin-left:50px;display:grid;grid-template-columns:repeat(auto-fill, minmax(250px, 1fr));grid-gap:20px;padding:20px}@media screen and (max-width: 800px){.container{display:block}}/*# sourceMappingURL=Main.module.css.map */
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.countries {
+  margin-left: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 20px;
+  padding: 20px;
+}
+
+@media screen and (max-width: 800px) {
+  .container {
+    display: block;
+  }
+}
+
+/*# sourceMappingURL=Main.module.css.map */
