--- a/css/Searchbar.module.css
+++ b/css/Searchbar.module.css
@@ -1,1 +1,118 @@
-.container-dark{margin-left:70px;opacity:1;display:flex;width:450px;height:50px;border-radius:5px;margin-top:50px;box-shadow:0 0 5px #202c37;background-color:#2b3945}.container-dark img{width:20px;height:20px;margin-top:15px;margin-left:20px;margin-right:20px}.container-dark input{border:none;margin-top:9px;width:350px;height:35px;font-family:"Nunito Sans",sans-serif}.container-dark input{color:#fff;background-color:#2b3945}.container-dark input::-moz-placeholder{color:#fff}.container-dark input::placeholder{color:#fff}.container-light{margin-left:70px;opacity:1;display:flex;width:450px;height:50px;border-radius:5px;margin-top:50px;box-shadow:0 0 5px #202c37;background-color:#f7f7f7}.container-light img{width:20px;height:20px;margin-top:15px;margin-left:20px;margin-right:20px}.container-light input{border:none;margin-top:9px;width:350px;height:35px;font-family:"Nunito Sans",sans-serif}.container-light input{color:#111517;background-color:#f7f7f7}.container-light input::-moz-placeholder{color:#111517}.container-light input::placeholder{color:#111517}@media screen and (max-width: 800px){.container-dark{margin-left:70px;opacity:1;display:flex;width:250px;height:50px;border-radius:5px;margin-top:50px;box-shadow:0 0 5px #202c37}.container-dark img{width:20px;height:20px;margin-top:15px;margin-left:20px;margin-right:20px}.container-dark input{border:none;margin-top:9px;width:350px;height:35px;font-family:"Nunito Sans",sans-serif}.container-light{margin-left:70px;opacity:1;display:flex;width:250px;height:50px;border-radius:5px;margin-top:50px;box-shadow:0 0 5px #202c37}.container-light img{width:20px;height:20px;margin-top:15px;margin-left:20px;margin-right:20px}.container-light input{border:none;margin-top:9px;width:350px;height:35px;font-family:"Nunito Sans",sans-serif}}/*# sourceMappingURL=Searchbar.module.css.map */
+.container-dark {
+  margin-left: 50px;
+  opacity: 1;
+  display: flex;
+  width: 450px;
+  height: 50px;
+  border-radius: 5px;
+  margin-top: 50px;
+  box-shadow: 0 0 5px hsl(207, 26%, 17%);
+  background-color: hsl(208, 23%, 22%);
+}
+.container-dark img {
+  width: 20px;
+  height: 20px;
+  margin-top: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.container-dark input {
+  border: none;
+  margin-top: 9px;
+  width: 350px;
+  height: 35px;
+  font-family: "Nunito Sans", sans-serif;
+}
+.container-dark input {
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(208, 23%, 22%);
+}
+.container-dark input::placeholder {
+  color: hsl(0, 0%, 100%);
+}
+
+.container-light {
+  margin-left: 50px;
+  opacity: 1;
+  display: flex;
+  width: 450px;
+  height: 50px;
+  border-radius: 5px;
+  margin-top: 50px;
+  box-shadow: 0 0 5px hsl(207, 26%, 17%);
+  background-color: hsl(0, 0%, 97%);
+}
+.container-light img {
+  width: 20px;
+  height: 20px;
+  margin-top: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.container-light input {
+  border: none;
+  margin-top: 9px;
+  width: 350px;
+  height: 35px;
+  font-family: "Nunito Sans", sans-serif;
+}
+.container-light input {
+  color: hsl(200, 15%, 8%);
+  background-color: hsl(0, 0%, 97%);
+}
+.container-light input::placeholder {
+  color: hsl(200, 15%, 8%);
+}
+
+@media screen and (max-width: 800px) {
+  .container-dark {
+    margin-left: 70px;
+    opacity: 1;
+    display: flex;
+    width: 250px;
+    height: 50px;
+    border-radius: 5px;
+    margin-top: 50px;
+    box-shadow: 0 0 5px hsl(207, 26%, 17%);
+  }
+  .container-dark img {
+    width: 20px;
+    height: 20px;
+    margin-top: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .container-dark input {
+    border: none;
+    margin-top: 9px;
+    width: 350px;
+    height: 35px;
+    font-family: "Nunito Sans", sans-serif;
+  }
+  .container-light {
+    margin-left: 70px;
+    opacity: 1;
+    display: flex;
+    width: 250px;
+    height: 50px;
+    border-radius: 5px;
+    margin-top: 50px;
+    box-shadow: 0 0 5px hsl(207, 26%, 17%);
+  }
+  .container-light img {
+    width: 20px;
+    height: 20px;
+    margin-top: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .container-light input {
+    border: none;
+    margin-top: 9px;
+    width: 350px;
+    height: 35px;
+    font-family: "Nunito Sans", sans-serif;
+  }
+}
+
+/*# sourceMappingURL=Searchbar.module.css.map */
