--- a/src/Scss/Main.scss
+++ b/src/Scss/Main.scss
@@ -4,7 +4,8 @@
 }
 
 .countries {
-	margin-left: 50px;
+	margin-left: 30px;
+
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	grid-gap: 20px;
