--- a/src/Scss/Searchbar.scss
+++ b/src/Scss/Searchbar.scss
@@ -27,7 +27,7 @@
 }
 
 @mixin container {
-	margin-left: 70px;
+	margin-left: 50px;
 	opacity: 1;
 	display: flex;
 	width: 450px;
